--- a/front-end-react/src/index.html
+++ b/front-end-react/src/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="./index.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
+  <!-- <h1 class="text-3xl font-bold underline">
     This is just a placeholder.
-  </h1>
+  </h1> -->
 </body>
 </html>
